--- a/RAG/Langchain/chain.ipynb
+++ b/RAG/Langchain/chain.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,28 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'physics': LLMChain(prompt=PromptTemplate(input_variables=['input'], template=\"You are a very smart physics professor. \\nYou are great at answering questions about physics in a concise and easy to understand manner. \\nWhen you don't know the answer to a question you admit that you don't know.\\n\\nHere is a question:\\n{input}\"), llm=OpenAI(client=<openai.resources.completions.Completions object at 0x000001A132C9F8B0>, async_client=<openai.resources.completions.AsyncCompletions object at 0x000001A132ED0EE0>, temperature=0.5, openai_api_key='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', openai_proxy='')),\n",
-       " 'math': LLMChain(prompt=PromptTemplate(input_variables=['input'], template='You are a very good mathematician. You are great at answering math questions. \\nYou are so good because you are able to break down hard problems into their component parts, \\nanswer the component parts, and then put them together to answer the broader question.\\n\\nHere is a question:\\n{input}'), llm=OpenAI(client=<openai.resources.completions.Completions object at 0x000001A132C9F8B0>, async_client=<openai.resources.completions.AsyncCompletions object at 0x000001A132ED0EE0>, temperature=0.5, openai_api_key='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', openai_proxy=''))}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "destination_chains"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +438,7 @@
        "'physics: Good for answering questions about physics\\nmath: Good for answering math questions'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +458,7 @@
        "'Given a raw text input to a language model select the model prompt best suited for the input. You will be given the names of the available prompts and a description of what the prompt is best suited for. You may also revise the original input if you think that revising it will ultimately lead to a better response from the language model.\\n\\n<< FORMATTING >>\\nReturn a markdown code snippet with a JSON object formatted to look like:\\n```json\\n{{\\n    \"destination\": string \\\\ name of the prompt to use or \"DEFAULT\"\\n    \"next_inputs\": string \\\\ a potentially modified version of the original input\\n}}\\n```\\n\\nREMEMBER: \"destination\" MUST be one of the candidate prompt names specified below OR it can be \"DEFAULT\" if the input is not well suited for any of the candidate prompts.\\nREMEMBER: \"next_inputs\" can just be the original input if you don\\'t think any modifications are needed.\\n\\n<< CANDIDATE PROMPTS >>\\nphysics: Good for answering questions about physics\\nmath: Good for answering math questions\\n\\n<< INPUT >>\\n{input}\\n\\n<< OUTPUT (must include ```json at the start of the response) >>\\n<< OUTPUT (must end with ```) >>\\n'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,22 +483,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new MultiPromptChain chain...\u001b[0m\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\86195\\.conda\\envs\\transformers\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:117: LangChainDeprecationWarning: The function `run` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
+      "  warn_deprecated(\n",
       "c:\\Users\\86195\\.conda\\envs\\transformers\\lib\\site-packages\\langchain\\chains\\llm.py:316: UserWarning: The predict_and_parse method is deprecated, instead pass an output parser directly to LLMChain.\n",
       "  warnings.warn(\n"
      ]
@@ -528,31 +500,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new MultiPromptChain chain...\u001b[0m\n",
       "physics: {'input': 'What is black body radiation?'}\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "\n",
       "\n",
-      "Black body radiation is a phenomenon in which a perfect absorber and emitter of radiation, called a black body, emits and absorbs radiation at all wavelengths. This radiation is emitted due to the thermal energy of the object and follows a specific distribution known as the Planck distribution. The amount of radiation emitted at a particular wavelength is determined by the temperature of the object, with hotter objects emitting more radiation at shorter wavelengths. This concept is important in understanding the behavior of objects in thermal equilibrium and is a fundamental concept in thermodynamics and quantum mechanics.\n"
+      "Black body radiation refers to the electromagnetic radiation emitted by a perfect black body, which is an idealized object that absorbs all radiation that falls on it. This radiation is characterized by a continuous spectrum, meaning that it contains all wavelengths of light. The intensity of the radiation at each wavelength is determined by the temperature of the black body, with hotter objects emitting more radiation at shorter wavelengths. This phenomenon is important in understanding the thermal radiation emitted by objects, such as stars and planets, and plays a crucial role in many areas of physics, including thermodynamics and astrophysics. \n"
      ]
     }
    ],
    "source": [
     "print(chain.run(\"What is black body radiation?\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
