--- a/RAG/Langchain/chain.ipynb
+++ b/RAG/Langchain/chain.ipynb
@@ -519,6 +519,198 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sequential"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import OpenAI,ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate \n",
+    "from langchain.chains import SequentialChain,LLMChain\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm=ChatOpenAI(model=\"gpt-3.5-turbo-0125\",temperature=1)\n",
+    "template1=\"\"\"你是一个玄幻小说家,对于一个小说标题,你会首先给出十个章节标题,后续再进行深度编写\n",
+    "对于玄幻小说标题为<{input}>的小说,请给出十个章节标题.注意章节标题不超过15个字.\n",
+    "格式为:1.第一章:xxx 2.第二章:xxx....\"\"\"\n",
+    "\n",
+    "template2=\"\"\"你是一个玄幻小说家,对于不同的小说章节标题,你会根据每一个标题,注意每一个标题都编写出200字左右的具体内容!!!\n",
+    "注意每一个标题都编写出200字左右的具体内容!!!\n",
+    "而且每一个相邻章节之间,内容必须要有关系,不能断裂.\n",
+    "小说的大标题是<{input}>,请根据标题:{topic},给出每一章的内容.\n",
+    "格式为:第一章内容:xxx  第一章内容:xxx.... \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template1=PromptTemplate(template=template1,input_variables=[\"input\"])\n",
+    "chain_write_theme=LLMChain(llm=llm,prompt=template1,output_key=\"topic\",verbose=True)\n",
+    "\n",
+    "\n",
+    "template2=PromptTemplate(template=template2,input_variables=[\"input\",\"topic\"])\n",
+    "chain_write_content=LLMChain(llm=llm,prompt=template2,output_key=\"content\",verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m你是一个玄幻小说家,对于一个小说标题,你会首先给出十个章节标题,后续再进行深度编写\n",
+      "对于玄幻小说标题为<我在异世界修仙>的小说,请给出十个章节标题.注意章节标题不超过15个字.\n",
+      "格式为:1.第一章:xxx 2.第二章:xxx....\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': '我在异世界修仙',\n",
+       " 'topic': '1. 第一章: 异世界初遇\\n2. 第二章: 修仙之路\\n3. 第三章: 灵根觉醒\\n4. 第四章: 飞升凡尘\\n5. 第五章: 仙侠传承\\n6. 第六章: 诛仙之战\\n7. 第七章: 神秘异兽\\n8. 第八章: 灵宝探秘\\n9. 第九章: 仙府之门\\n10. 第十章: 修真大会'}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain_write_theme.invoke(\"我在异世界修仙\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain=SequentialChain(chains=[chain_write_theme,chain_write_content],input_variables=[\"input\"],output_variables=[\"content\"],verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m你是一个玄幻小说家,对于一个小说标题,你会首先给出十个章节标题,后续再进行深度编写\n",
+      "对于玄幻小说标题为<我在异世界修仙>的小说,请给出十个章节标题.注意章节标题不超过15个字.\n",
+      "格式为:1.第一章:xxx 2.第二章:xxx....\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m你是一个玄幻小说家,对于不同的小说章节标题,你会根据每一个标题,注意每一个标题都编写出200字左右的具体内容!!!\n",
+      "注意每一个标题都编写出200字左右的具体内容!!!\n",
+      "而且每一个相邻章节之间,内容必须要有关系,不能断裂.\n",
+      "小说的大标题是<我在异世界修仙>,请根据标题:1. 第一章: 穿越异世界\n",
+      "2. 第二章: 修炼之路\n",
+      "3. 第三章: 魔兽入侵\n",
+      "4. 第四章: 师门试炼\n",
+      "5. 第五章: 禁地探险\n",
+      "6. 第六章: 武道大会\n",
+      "7. 第七章: 隐世宗门\n",
+      "8. 第八章: 神兽觉醒\n",
+      "9. 第九章: 血脉觉醒\n",
+      "10. 第十章: 天地逆转,给出每一章的内容.\n",
+      "格式为:第一章内容:xxx  第一章内容:xxx.... \u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "result=chain({\"input\":\"我在异世界修仙\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'第一章: 穿越异世界\\n主人公李逍遥因意外穿越到了一个未知的异世界，对于这个陌生的世界充满好奇和兴奋，但同时也有着无比的恐惧和不安。\\n\\n第二章: 修炼之路\\n在异世界中，修炼成为了主人公的首要任务。李逍遥开始了漫长而艰难的修炼之路，不断磨砺自己的意志和实力，探索着这个世界的奥秘与规则。\\n\\n第三章: 魔兽入侵\\n突然，一波魔兽的入侵让整个异世界陷入了混乱和危机之中。李逍遥必须与其他修士们一起联手，抵御魔兽的侵袭，保卫自己的家园。\\n\\n第四章: 师门试炼\\n李逍遥加入了一个修仙宗门，为了证明自己的实力和价值，他必须接受宗门的严格试炼。在试炼中，李逍遥不断突破自我，成长为一名真正的修士。\\n\\n第五章: 禁地探险\\n宗门派遣李逍遥前往一处禁地探险，寻找传说中的宝藏和秘术。在禁地中，李逍遥面临重重危险和挑战，但也收获了许多珍贵的修炼资源和体会。\\n\\n第六章: 武道大会\\n异世界举办了一场规模宏大的武道大会，各路修士云集一堂，展示自己的实力和修炼成就。李逍遥也参与其中，与众多高手一较高下，争夺荣耀和名声。\\n\\n第七章: 隐世宗门\\n在一次偶然的机会中，李逍遥发现了一个神秘的隐世宗门，宗门内传承着古老的修仙秘术和精髓。他决定加入这个宗门，继承宗门的传统和使命。\\n\\n第八章: 神兽觉醒\\n李逍遥在修炼中觉醒了自身的神兽血脉，得到了神兽的加持和力量。他的实力大幅提升，拥有了更强的战斗力和灵活性，成为众人瞩目的焦点。\\n\\n第九章: 血脉觉醒\\n神兽血脉的觉醒让李逍遥的身体和灵魂发生了巨大的变化，他逐渐接触到了修仙之路的更深层次和秘密。他开始探索血脉的力量和本源，不断突破自身的极限。\\n\\n第十章: 天地逆转\\n在一次大型异变中，天地之间发生了逆转和颠覆，整个世界陷入了巨大的危机和动荡之中。作为修士的李逍遥站在了救世的前线，决心逆风翻盘，守护这个美丽而危险的异世界。'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result['content']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
