--- a/RAG/Langchain/chain.ipynb
+++ b/RAG/Langchain/chain.ipynb
@@ -705,7 +705,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 嘿嘿,自己慢慢玩把\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](../../static/微信图片_20240313230056.png)"
+   ]
   },
   {
    "cell_type": "markdown",
