--- a/RAG/Langchain/embedding.ipynb
+++ b/RAG/Langchain/embedding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2047,14 +2047,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1598/1598 [03:34<00:00,  7.46it/s]\n"
+      "  0%|          | 0/1598 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1598/1598 [03:48<00:00,  7.00it/s]\n"
      ]
     }
    ],
@@ -2084,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2119,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2129,13 +2136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=200,\n",
-    "    chunk_overlap=30,\n",
+    "    chunk_size=300,\n",
+    "    chunk_overlap=50,\n",
     "    length_function=len,\n",
     "    \n",
     ")"
@@ -2143,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,20 +2159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "183\n",
-      "“韩执事，在这里动手，抱歉了”萧炎目光漠然的望着那瘫倒在地的灰衣老姐，然后视线转向韩利，脸庞上再度浮现先前的那般温和笑容，歉然道。\n",
-      "\n",
+      "250\n",
       "此刻再度见到萧炎那般笑容，房间内已经再没有一人敢真的将他当做能够随意嘲讽的小绵羊，特别是那三名白家之人，更是警戒的退后几步，生怕萧炎突然也是对他们出手，连灰衣老奴都不是萧炎的对手，更何况他们了\n",
       "\n",
       "“唉”\n",
-      "page_content='“唉”\\n\\n韩利叹息了一声。片刻后只得挥了挥手，道：“此事也算她有些咎由自取，不过你下手也太狠了点，算了，白薇，将人带走吧”\\n\\n闻言，那名白衣冷艳女子轻咬了咬银牙，目光有些惊惧的看了萧炎一眼，然后方才带着另外两名白家之人，将吐血昏迷在地的灰衣老姐扶起，然后有些狼狈的出了这间测验室，而一旁的邱家三人，也是不想在这里过多停留。视线惊疑不定的打量了萧炎一番后，也是退了出去。' metadata={'source': '../../static/docs/splited_txt/第一千一百一十一章.txt'}\n"
+      "\n",
+      "韩利叹息了一声。片刻后只得挥了挥手，道：“此事也算她有些咎由自取，不过你下手也太狠了点，算了，白薇，将人带走吧”\n",
+      "\n",
+      "闻言，那名白衣冷艳女子轻咬了咬银牙，目光有些惊惧的看了萧炎一眼，然后方才带着另外两名白家之人，将吐血昏迷在地的灰衣老姐扶起，然后有些狼狈的出了这间测验室，而一旁的邱家三人，也是不想在这里过多停留。视线惊疑不定的打量了萧炎一番后，也是退了出去。\n",
+      "page_content='“你这子还真是说动手就动手，虽然老夫心头也很爽，但以后白家肯定不会善罢甘休的”见到灰溜溜离开的一行人，叶重也是不由得摇了摇头，道。\\n\\n萧炎笑了笑。道：“没事，白家想要找麻烦。我陪他们便是”\\n\\n“呵呵，看来这一次叶家很有把握通过考核啊，叶重，恭喜了。韩利缓步上前，对着叶重拱手笑道。\\n\\n“借你吉言了。不过出了这档事，想必等五大家族考核开始时，白家说不定会派出真正的佼佼者，将我叶家，挤出前三”叶重苦笑了一声。道。' metadata={'source': '../../static/docs/splited_txt/第一千一百一十一章.txt'}\n"
      ]
     }
    ],
@@ -2245,8 +2254,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sentence_transformers import SentenceTransformer\n",
-    "embedding_model2 = SentenceTransformer(model_name_or_path=r\"E:\\database_embedding\\aspire\\acge_text_embedding\")"
+    "from langchain.embeddings.huggingface import HuggingFaceEmbeddings\n",
+    "\n",
+    "embedding = HuggingFaceEmbeddings(model_name=\"E:\\database_embedding\\sentence-transformers\\paraphrase-multilingual-MiniLM-L12-v2\")\n",
+    "\n",
+    "# from langchain_openai import OpenAIEmbeddings\n",
+    "# embedding = OpenAIEmbeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\86195\\.conda\\envs\\transformers\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.embeddings.openai.OpenAIEmbeddings` was deprecated in langchain-community 0.1.0 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "embedding = OpenAIEmbeddings()"
    ]
   },
   {
@@ -2258,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,8 +2301,8 @@
     "persist_directory = r'E:\\vectordb\\aspire'\n",
     "# 加载数据库\n",
     "vectordb = Chroma.from_documents(\n",
-    "    documents=doc_split,\n",
-    "    embedding=embedding_model2,\n",
+    "    documents=doc_split[:100],\n",
+    "    embedding=embedding,\n",
     "    persist_directory=persist_directory  # 允许我们将persist_directory目录保存到磁盘上\n",
     ")\n",
     "# 将加载的向量数据库持久化到磁盘上\n",
@@ -2298,6 +2330,13 @@
     "embedding2 = embedding.embed_query(sentence2)\n",
     "embedding3 = embedding.embed_query(sentence3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2351,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2372,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2381,14 +2420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48692\n"
+      "100\n"
      ]
     }
    ],
@@ -2398,28 +2437,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "question=\"魂殿殿主是谁？\"\n",
-    "answer=vectordb.similarity_search(question, k=3)"
+    "question=\"小医仙\"\n",
+    "answer=vectordb.similarity_search(question, k=3,filter={'source': '../../static/docs/splited_txt/第一千一百一十六章.txt'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='“你是魂殿殿主？！”\\n\\n萧炎的灵魂猛的传出一股剧烈的波动，魂殿之中，能够将灵魂修炼到这种境界的人，除了那一直未曾露面的魂殿殿主之外，还能有何人？', metadata={'source': '../../static/docs/splited_txt/第一千四百七十一章.txt'}),\n",
-       " Document(page_content='第一千四百三十一章   魂殿副殿主\\n\\n第一千四百三十一章魂殿副殿主\\n\\n第一千四百三十一章魂殿副殿主\\n\\n“本殿？”\\n\\n听得那自扭曲空间之中所传出的漠然之声，萧炎眼瞳却是陡然一缩，此番来人，明显是魂殿搞的鬼，而此人又是自称本殿，莫非他便是魂殿那位极其神秘舟殿主不成？', metadata={'source': '../../static/docs/splited_txt/第一千四百三十一章.txt'}),\n",
-       " Document(page_content='“魂殿这些家伙，倒真的是作恶无数“萧炎轻叹一声，袖袍一挥，便是将这灵魂光团收入纳戒之中，然后再次看了一眼周围，此刻这座人殿，除了那副殿主逃脱之外,其余所有人都是尽数被斩杀，虽说不少魂殿强者都是灵魂体，一死便是消散于天地之间，但依旧有着不少人拥有着*', metadata={'source': '../../static/docs/splited_txt/第一千四百六十九章.txt'})]"
+       "[Document(page_content='闻言，那红袍老者也是笑着点了点头，素心丹对于炼药师帮助不小，而且主要是炼制起来有些麻烦，即便是一些达到了七品中级的炼药师，炼制这丹药的成功率也是相当之低，而也正因为如此，方才导致素心丹的昂贵，用这些药材来换取素心丹，他倒是捡了不少的便宜。\\n\\n在嘱咐了这红袍老者一声后，萧炎也就不再多留，带着众人径直对着一楼行去，然后直接出了炼药师交易佘，赶回叶院。”\\n\\n一回到牛院，萧炎便是迫不及待的让得叶重他们将院门紧闭，然后带着天火尊者，小医仙二人钻进了房间之中。\\n\\n房间内，三人围拢在桌旁，而桌上所摆放的，则是那枚剁1刚得到的怪异铜片。', metadata={'source': '../../static/docs/splited_txt/第一千一百一十六章.txt'}),\n",
+       " Document(page_content='让欣蓝将摊子收起，萧炎转身走向那名苦笑的红袍老者，冲着他笑了笑，从纳戒内取出一个玉瓶，道：“也别说我让你亏了，这是一枚素心丹，换你这血精妖果，你赚了。“”\\n\\n听得萧炎拿出的丹药居然是素心丹，那名红袍老者脸庞上的苦笑顿时消散而去，连忙接过玉瓶，小心翼翼的将丹药倒出，严格的检查了一番后，方才满意的点了点头。\\n\\n“以后如果还有血精妖果或者万年青灵藤，雪骨参这三种药材，可以来北边的叶院找我，我全部都要了，价格会让你满意的。“”萧炎随手将水晶台上的那玉盒拿起，手指在其中那血精妖果上摸了摸，一股滑腻的触感顿时从指尖弥漫而出，他这才点了点头，将东西收入纳戒，淡笑道。', metadata={'source': '../../static/docs/splited_txt/第一千一百一十六章.txt'}),\n",
+       " Document(page_content='那正有些无聊的等待卖主上门的欣蓝见到萧炎一行人，脸颊顿时浮现一抹欣喜，连忙站起身来。“怎么样？”萧炎笑了笑，问道。“嘿嘿，那个老家伙最后还是妥协了。“”欣蓝嘿嘿笑道，然后美眸转向不远处那也正眼巴巴看着自己一行人的红袍老者。“还有其他的收获么？”萧炎一笑，这老家伙还是熬不住啊。“没有了，你所说的那万年青灵藤，是一种很罕见的药材，我在这里问了不少人，但他们都没有。“”欣蓝摇了摇头，无奈的道。\\n\\n萧炎点了点头，有这等结果他并不意外，毕竟万年青灵藤的确很少见，而且再加上这东西本就是炼制一些高价丹药的必备之物，即便是一些人手中有着这东西，也是很少会有拿出来交换的。', metadata={'source': '../../static/docs/splited_txt/第一千一百一十六章.txt'})]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,9 +2469,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(page_content='闻言，那红袍老者也是笑着点了点头，素心丹对于炼药师帮助不小，而且主要是炼制起来有些麻烦，即便是一些达到了七品中级的炼药师，炼制这丹药的成功率也是相当之低，而也正因为如此，方才导致素心丹的昂贵，用这些药材来换取素心丹，他倒是捡了不少的便宜。\\n\\n在嘱咐了这红袍老者一声后，萧炎也就不再多留，带着众人径直对着一楼行去，然后直接出了炼药师交易佘，赶回叶院。”\\n\\n一回到牛院，萧炎便是迫不及待的让得叶重他们将院门紧闭，然后带着天火尊者，小医仙二人钻进了房间之中。\\n\\n房间内，三人围拢在桌旁，而桌上所摆放的，则是那枚剁1刚得到的怪异铜片。', metadata={'source': '../../static/docs/splited_txt/第一千一百一十六章.txt'})"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -2496,7 +2546,6 @@
    "source": [
     "import numpy as np\n",
     "embedding1 = embedding_model2.encode(\"我喜欢你\",normalize_embeddings=True)\n",
-    "embedding2 = embedding_model2.encode(\"我操你妈\",normalize_embeddings=True)\n",
     "np.dot(embedding1, embedding2)"
    ]
   },
