--- a/RAG/Langchain/embedding.ipynb
+++ b/RAG/Langchain/embedding.ipynb
@@ -2489,7 +2489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 检索的内容有点差，考虑换embedding模型"
+    "## 检索的内容有点差，考虑换embedding模型,其实最主要的原因还是此技术不适合当前业务需求"
    ]
   },
   {
