--- a/test.ipynb
+++ b/test.ipynb
@@ -32,6 +32,56 @@
    "source": [
     "publish_display_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import subprocess\n",
+    "\n",
+    "os.environ['HF_ENDPOINT'] = '[https://hf-mirror.com](https://hf-mirror.com/)'\n",
+    "\n",
+    "def download_model(model_name):\n",
+    "    try:\n",
+    "        subprocess.run(['huggingface-cli', 'download', '--resume-download', model_name,'--local-dir',model_name], check=True)\n",
+    "        print(f\"Model '{model_name}' downloaded successfully.\")\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(f\"Error downloading model '{model_name}': {e}\")\n",
+    "\n",
+    "def download_dataset(dataset_name):\n",
+    "    try:\n",
+    "        subprocess.run(['huggingface-cli', 'download', '--resume-download','--repo-type','dataset',dataset_name,\"--local-dir\",\"E:\\\\database_embedding\\\\jina\"], check=True)\n",
+    "        print(f\"Dataset '{dataset_name}' downloaded successfully.\")\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(f\"Error downloading dataset '{dataset_name}': {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error downloading model 'jinaai/jina-embeddings-v2-base-zh': Command '['huggingface-cli', 'download', '--resume-download', 'jinaai/jina-embeddings-v2-base-zh', '--local-dir', 'jinaai/jina-embeddings-v2-base-zh']' returned non-zero exit status 1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "download_model(\"jinaai/jina-embeddings-v2-base-zh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
